--- a/pkg/promtail/server/ui/templates/_base.html
+++ b/pkg/promtail/server/ui/templates/_base.html
@@ -43,6 +43,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="{{ pathPrefix }}/service-discovery">Service Discovery</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ pathPrefix }}/targets">Targets</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ pathPrefix }}/config">Config</a></li>
                         <li class= "nav-item" >
                             <a class ="nav-link" href="https://github.com/grafana/loki" target="_blank">Help</a>
                         </li>
